
Release 5.0.9 (unreleased)
==========================

Bug fixes
---------

- Fix in sever accident (mass source terms for metal modelling).

- Fix crash in some polygon triangulation cases.

- Fix incorrect GUI-defined DOF locking for coupling with code_aster.

- Fix incorrect access to per-scalar density in some cases.

- Fix error on unconverged linear solver using PETSc.

- Fix empty mesh in error postprocessing for linear solvers.

- Fix for possible bug in postprocessing edges mesh extraction.

- Fix for OpenMP multigrid-preconditioned Conjugate Gradient convergence issue.
  This requires using a flexible variant of the Conjugate Gradient when
  using a Gauss-Seidel smoother with multiple threads.

- Fix spurious mapping of previous mass flux with order 1 in time scheme.

- Fix pressure drop by zone computation (gravity term twice multiplied by
  density at outlet boundary).

- GUI: fix failure to cleanly stop running computations on some
  systems (Mantis issue #242).

- Fix crash in restart using coupled RSM model from non-RSM computation
  (issue #252).

Numerics
--------

- Add choice of inexact (flexible) preconditioned congugate gradient.
  * When using multiple threads and multigrid preconditioning with a
    Gauss-Seidel smoother, this choice is set by default over the
    standard preconditioned congugate gradient.

Architectural changes
---------------------

- Fluid-structure interaction: update script generation for coupling
  with current versions of Salome-Meca.

Release 5.0.8 (Mar 30 2018)
===========================

Bug fixes
---------

- Fix for importing some EnSight geometries (meshes) in preprocessor.

- Fix crash using Intel 2018 compilers.

- Fix some memory leaks using Catalyst output.

- Fix parallel interlock in some cases where using the 1D thermal wall model.

- GUI: delete scalar profile and time average when deleting the scalar itself.

- Fix issue #251 (crash for periodicity in parallel in some cases).

Changes
-------
